2008-02-12  Marek Safar  <marek.safar@gmail.com>

	* driver.cs: Don't report full path for referenced module as assembly error.

2008-02-12  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Fixed `qh' target to work on all machines.
	
 	* report.cs, typemanager.cs, parameter.cs, ecore.cs, class.cs, anonymous.cs,
 	expression.cs, codegen.cs, statement.cs, doc.cs: Replaced type IsSubclassOf
 	and HasElementType with TypeManager implementation.

2008-02-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bugs #325134, #359749
 	* expression.cs, ecore.cs: Try to resolve an extension method even if the
 	first binds point to non-method member expression.
 	
2008-02-08  Marek Safar  <marek.safar@gmail.com>

 	* cs-parser.jay: Null coalescing operator is not part of ISO-1.

2008-02-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bugs #321394, #323028
 	* generic.cs, parameter.cs, ecore.cs, class.cs, decl.cs, delegate.cs: 
 	Reworked naive IsAccessibleAs implementation to handle nested types.

2008-02-05  Jb Evain  <jbevain@novell.com>

	* class.cs: use generic type comparison for parameters
	as well.

2008-02-05  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #325372
 	* class.cs: Use generic type comparison when testing method signatures.

2008-02-05  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #357047
 	* ecore.cs: Applied C# 3.0 changes to better conversion.

2008-02-05  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #358374
 	* cs-parser.jay: Correctly set modifiers for all constructor types.

2008-02-04  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #355251
 	* generic.cs: Added base class constraint based type inference.

2008-02-01  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #357255
 	* decl.cs: One more missing visibility check.

2008-02-01  Marek Safar  <marek.safar@gmail.com>

	* support.cs: Fixed broken return.

2008-01-25  Marek Safar  <marek.safar@gmail.com>
