@@ -1,3 +1,8 @@
+2008-02-13  Marek Safar  <marek.safar@gmail.com>
+
+	* generic.cs, typemanager.cs, iterators.cs, codegen.cs: Refactored core
+	lookup methods to use standard member cache when doing member lookup.
+
 2008-02-12  Marek Safar  <marek.safar@gmail.com>
 
 	* driver.cs: Don't report full path for referenced module as assembly error.
